[metadata]
name = dp4imaging
version = 0.2
author = Ali Siahkoohi
author_email = alisk@gatech.edu
description = dp4imaging: Deep Bayesian inference for seismic imaging with tasks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/slimgroup/dp4imaging
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    devito[extras,tests]
    h5py
    matplotlib
    numpy
    tqdm
    pandas
    seaborn
    gitpython
    torch

packages = find:
python_requires = >=3.10

[options.packages.find]
exclude =
    tests*
    scripts*
    assets*

[options.extras_require]
pytorch =
    torch
    torch-cuda==12.4
